@@ -14,7 +14,8 @@ Version 1.0.0 -
   * tested with Python 3.2 - OK
   * further compatibility-tests only for CPython 2.7 & CPython 3.2+
   * added Drawing.add_xref(filename), for usage see examples/xref.py
-  * adding relative attributes by Insert.add() concidering the 'Insert' scaling
+  * adding relative attributes by Insert.add() concidering the xy-scaling
+  * added **Howtos** section to documentation
 
 Version 0.3.6 - 14 November 2010
 
